map gallery spacing fix

--- a/css/main.less
+++ b/css/main.less
@@ -1144,6 +1144,7 @@ hr:before {
 		//800
 		max-width:400px;
 		display:inline-block;
+		margin-top: -10px;
 
 		.block {
 			//20
